--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="yui-gc">
 					<div class="yui-u first">
 						<div class="column-img">
-							<img src="https://media.licdn.com/dms/image/D4D03AQG9L3yJVIk6MA/profile-displayphoto-shrink_400_400/0/1719253292544?e=1724889600&v=beta&t=WJPfbYAvM_NQvxHL1dmQHajQZWedh2S9hnFEIUeLO4g"
+							<img src="1719253292544.jpg"
 								alt="Profile Photo">
 						</div>
 						<div class="column">
