--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 				<div class="yui-gc">
 					<div class="yui-u first">
 						<div class="column-img">
-							<img src="1719253292544.jpg"
-								alt="Profile Photo">
+							<img src="1719253292544.jpg" alt="Profile Photo">
 						</div>
 						<div class="column">
 							<h1>Kaylin Reed</h1>
