--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
 					<div class="yui-u">
 						<div class="contact-info">
-							<h3><i class="fa fa-envelope"> - <a
-										href="mailto:kaylinchardonnay96@icloud.com">kaylinchardonnay96@icloud.com</a></i>
+							<h3><i class="fa fa-envelope"> - <a href="mailto:kaylinchardonnay96@icloud.com">kaylinchardonnay96@icloud.com</a></i>
 							</h3>
 							<h3><i class="fa fa-linkedin-square"></i> - <a href="https://za.linkedin.com/in/kaylin-reed-73b45b115">Kaylin Reed</a></h3>
 							<h3><i class="fa fa-mobile-phone" style="font-size:24px"></i> - 067 850 8957</h3>
@@ -67,7 +66,7 @@
 								<h2>Skills</h2>
 							</div>
 							<div class="yui-u">
-								<ul class="talent">
+								<ul>
 									<li>Python</li>
 									<li>HTML</li>
 									<li class="last">CSS</li>
@@ -81,7 +80,7 @@
 
 							<div class="yui-u first">
 								<h2>Experience</h2>
-							</div><!--// .yui-u -->
+							</div>
 
 							<div class="yui-u">
 
@@ -90,10 +89,10 @@
 									<h3>Sales Consultant</h3>
 									<h4>2015&mdash;2017</h4>
 									<p>
-										Dealt with prepaid customers, sold airtime and data.<br>
-										Discussed different contract price plans/ packages<br>
-										Did credit checks and verified banking details<br>
-										Answered incoming calls and emails in an efficient manner.
+										• Dealt with prepaid customers, sold airtime and data.<br>
+										• Discussed different contract price plans/ packages<br>
+										• Did credit checks and verified banking details<br>
+										• Answered incoming calls and emails in an efficient manner.
 									</p>
 								</div>
 
