--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@
 								<h2>Skills</h2>
 							</div>
 							<div class="yui-u">
-								<ul>
-									<li>Python</li>
-									<li>HTML</li>
-									<li class="last">CSS</li>
-								</ul>
-
-
+								<p>
+									• Python.<br>
+									• HTML<br>
+									• CSS
+								</p>
 							</div>
 						</div>
 
