--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 									<h4>2015&mdash;2017</h4>
 									<p>
 										• Dealt with prepaid customers, sold airtime and data.<br>
-										• Discussed different contract price plans/ packages<br>
-										• Did credit checks and verified banking details<br>
+										• Discussed different contract price plans/ packages.<br>
+										• Did credit checks and verified banking details.<br>
 										• Answered incoming calls and emails in an efficient manner.
 									</p>
 								</div>
@@ -113,9 +113,9 @@
 									<h4>2019&mdash;2024</h4>
 									<p>
 										<strong>Anti-Money Laundering</strong> &mdash; Evaluated and assessed high risk
-										client profile to determine if client is a risk to the Bank<br>
+										client profile to determine if client is a risk to the Bank.<br>
 										<strong>Forex</strong> &mdash; Assisted with processing international
-										payments<br>
+										payments.<br>
 										<strong>Client Care</strong> &mdash; Client calls in and we should be able to
 										assist with any query the client has.<br>
 										<strong>Outbound Campaigns</strong> &mdash; Do credit applications with clients
