Attached the CV

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 						<div class="contact-info">
 							<h3><i class="fa fa-envelope"> - <a href="mailto:kaylinchardonnay96@icloud.com">kaylinchardonnay96@icloud.com</a></i>
 							</h3>
-							<h3><i class="fa fa-linkedin-square"></i> - <a href="https://za.linkedin.com/in/kaylin-reed-73b45b115">Kaylin Reed</a></h3>
+							<h3><i class="fa fa-linkedin-square"></i> - <a href="https://za.linkedin.com/in/kaylin-reed-73b45b115" target="_blank" rel="noopener noreferrer">Kaylin Reed</a></h3>
 							<h3><i class="fa fa-mobile-phone" style="font-size:24px"></i> - 067 850 8957</h3>
+							<h3><i class="fa fa-file-text"></i> - <a href="https://drive.google.com/file/d/1ptq4JnamdsFivHLpc6foVGgAy2-SPDI6/view?usp=sharing" target="_blank" rel="noopener noreferrer">My CV</a></h3>
 						</div>
 					</div>
 				</div>
@@ -67,7 +68,7 @@
 							</div>
 							<div class="yui-u">
 								<p>
-									• Python.<br>
+									• Python<br>
 									• HTML<br>
 									• CSS
 								</p>
